--- a/assets/styles/scss/base/_layout.scss
+++ b/assets/styles/scss/base/_layout.scss
@@ -6,13 +6,13 @@
 -  Nav
 \* -------------------------------------------------------------------------- */
 
-// # <<----------<< Generic >>---------->>
+// # <<----------<< Generic Tags>>---------->>
 
 nav {
   // ...
 }
 
-// #  <<----------<< Specific >>---------->>
+// #  <<----------<< Specific Classes >>---------->>
 
 // ...
 
@@ -20,13 +20,13 @@ nav {
 -  Aside
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< Generic >>---------->>
+// #  <<<----------<< Generic Tags>>---------->>
 
 aside {
   // ...
 }
 
-// #  <<<----------<< Specific >>---------->>
+// #  <<<----------<< Specific Classes >>---------->>
 
 // ...
 
@@ -34,13 +34,13 @@ aside {
 -  Section
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< Generic >>---------->>
+// #  <<<----------<< Generic Tags>>---------->>
 
 section {
   // ...
 }
 
-// #  <<<----------<< Specific >>---------->>
+// #  <<<----------<< Specific Classes >>---------->>
 
 // ...
 
@@ -48,13 +48,13 @@ section {
 -  Article
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< Generic >>---------->>
+// #  <<<----------<< Generic Tags>>---------->>
 
 article {
   // ...
 }
 
-// #  <<<----------<< Specific >>---------->>
+// #  <<<----------<< Specific Classes >>---------->>
 
 // ...
 
@@ -62,7 +62,7 @@ article {
 -  Forms
 \* -------------------------------------------------------------------------- */
 
-// #  <<<----------<< Generic >>---------->>
+// #  <<<----------<< Generic Tags>>---------->>
 
 form {
   // ...
@@ -112,6 +112,6 @@ output {
   // ...
 }
 
-// #  <<<----------<< Specific >>---------->>
+// #  <<<----------<< Specific Classes >>---------->>
 
 // ...
