--- a/assets/styles/scss/components/containers/_block-container.scss
+++ b/assets/styles/scss/components/containers/_block-container.scss
@@ -4,8 +4,12 @@
 
 // -  <<----------<< General >>---------->>
 
-.block {
-  @include container(block);
+.inner-block {
+  @include container(inner-block);
+}
+
+.outer-block {
+  @include container(outer-block);
 }
 
 // -  <<----------<< Specific >>---------->>
