--- a/assets/styles/scss/components/containers/_flex-container.scss
+++ b/assets/styles/scss/components/containers/_flex-container.scss
@@ -4,8 +4,12 @@
 
 // -  <<----------<< General >>---------->>
 
-.flex {
-  @include container(flex);
+.inner-flex {
+  @include container(inner-flex);
+}
+
+.outer-flex {
+  @include container(outer-flex);
 }
 
 // -  <<----------<< Specific >>---------->>
