--- a/assets/styles/scss/components/containers/_grid-container.scss
+++ b/assets/styles/scss/components/containers/_grid-container.scss
@@ -4,8 +4,12 @@
 
 // -  <<----------<< General >>---------->>
 
-.grid {
-  @include container(grid);
+.inner-grid {
+  @include container(inner-grid);
+}
+
+.outer-grid {
+  @include container(outer-grid);
 }
 
 // -  <<----------<< Specific >>---------->>
